Cleaned up libraries

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,6 @@
 file.reference.jena-core-2.12.1.jar=srclib/jena-core-2.12.1.jar
 file.reference.jena-iri-1.1.1.jar-1=srclib/jena-iri-1.1.1.jar
 file.reference.log4j-1.2.17.jar-1=../VERSCommon/srclib/log4j-1.2.17.jar
-file.reference.slf4j-api-1.7.6.jar-1=../VERSCommon/srclib/slf4j-api-1.7.6.jar
-file.reference.slf4j-log4j12-1.7.6.jar-1=../VERSCommon/srclib/slf4j-log4j12-1.7.6.jar
-file.reference.VERSCommon.jar=../VERSCommon/dist/VERSCommon.jar
 file.reference.xercesImpl-2.11.0.jar-1=srclib/xercesImpl-2.11.0.jar
 file.reference.xml-apis-1.4.01.jar-1=srclib/xml-apis-1.4.01.jar
 javac.external.vm=false
@@ -16,6 +13,8 @@ javadoc.author=false
 build.sysclasspath=ignore
 javac.target=1.8
 build.generated.dir=${build.dir}/generated
+project.VERSCommon=../VERSCommon
+reference.VERSCommon.jar=${project.VERSCommon}/dist/VERSCommon.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -61,14 +60,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 javac.classpath=\
+    ${file.reference.log4j-1.2.17.jar-1}:\
     ${file.reference.jena-core-2.12.1.jar}:\
     ${file.reference.jena-iri-1.1.1.jar-1}:\
-    ${file.reference.slf4j-log4j12-1.7.6.jar-1}:\
-    ${file.reference.log4j-1.2.17.jar-1}:\
-    ${file.reference.slf4j-api-1.7.6.jar-1}:\
     ${file.reference.xercesImpl-2.11.0.jar-1}:\
     ${file.reference.xml-apis-1.4.01.jar-1}:\
-    ${file.reference.VERSCommon.jar}
+    ${reference.VERSCommon.jar}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
