--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,8 @@
 file.reference.jena-core-2.12.1.jar=srclib/jena-core-2.12.1.jar
 file.reference.jena-iri-1.1.1.jar-1=srclib/jena-iri-1.1.1.jar
 file.reference.log4j-1.2.17.jar-1=../VERSCommon/srclib/log4j-1.2.17.jar
+file.reference.slf4j-api-1.7.6.jar-1=../VERSCommon/srclib/slf4j-api-1.7.6.jar
+file.reference.slf4j-log4j12-1.7.6.jar-1=../VERSCommon/srclib/slf4j-log4j12-1.7.6.jar
 file.reference.xercesImpl-2.11.0.jar-1=srclib/xercesImpl-2.11.0.jar
 file.reference.xml-apis-1.4.01.jar-1=srclib/xml-apis-1.4.01.jar
 javac.external.vm=false
@@ -61,6 +63,8 @@ javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 javac.classpath=\
     ${file.reference.log4j-1.2.17.jar-1}:\
+    ${file.reference.slf4j-api-1.7.6.jar-1}:\
+    ${file.reference.slf4j-log4j12-1.7.6.jar-1}:\
     ${file.reference.jena-core-2.12.1.jar}:\
     ${file.reference.jena-iri-1.1.1.jar-1}:\
     ${file.reference.xercesImpl-2.11.0.jar-1}:\
