Made a release package. Fixed many comments and restructured the support files.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,7 @@ mkdist.disabled=false
 jar.compress=false
 jnlp.mixed.code=default
 annotation.processing.processors.list=
-javadoc.version=false
+javadoc.version=true
 build.classes.dir=${build.dir}/classes
 dist.dir=dist
 manifest.file=manifest.mf
@@ -57,7 +57,7 @@ file.reference.jena-iri-1.1.1.jar=../apache-jena-2.12.1/lib/jena-iri-1.1.1.jar
 platform.active=default_platform
 annotation.processing.enabled=true
 file.reference.xercesImpl-2.11.0.jar=../apache-jena-2.12.1/lib/xercesImpl-2.11.0.jar
-main.class=VEOCreate.SignVEOs
+main.class=VEOCreate.CreateVEO
 dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
