--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -57,7 +57,7 @@ file.reference.jena-iri-1.1.1.jar=../apache-jena-2.12.1/lib/jena-iri-1.1.1.jar
 platform.active=default_platform
 annotation.processing.enabled=true
 file.reference.xercesImpl-2.11.0.jar=../apache-jena-2.12.1/lib/xercesImpl-2.11.0.jar
-main.class=VEOCreate.CreateVEO
+main.class=Tests.StressTest
 dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
