Changed deprecated calls to get X509 issuer & subject, changed some LOG calls to creating a warning message, and ensured that when a LOG call occurred, the method was abandoned unless the call was purely informative.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,7 @@
+debug.modulepath=\
+    ${run.modulepath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 file.reference.jena-core-2.12.1.jar=srclib/jena-core-2.12.1.jar
 file.reference.jena-iri-1.1.1.jar-1=srclib/jena-iri-1.1.1.jar
 file.reference.log4j-1.2.17.jar-1=../VERSCommon/srclib/log4j-1.2.17.jar
@@ -6,6 +10,13 @@ file.reference.slf4j-log4j12-1.7.6.jar-1=../VERSCommon/srclib/slf4j-log4j12-1.7.
 file.reference.xercesImpl-2.11.0.jar-1=srclib/xercesImpl-2.11.0.jar
 file.reference.xml-apis-1.4.01.jar-1=srclib/xml-apis-1.4.01.jar
 javac.external.vm=false
+javac.modulepath=
+javac.processormodulepath=
+javac.test.modulepath=\
+    ${javac.modulepath}
+javadoc.html5=false
+jlink.launcher=false
+jlink.launcher.name=neoVEO
 #Thu Feb 25 10:00:54 AEDT 2016
 jnlp.offline-allowed=false
 javadoc.splitindex=true
@@ -13,7 +24,7 @@ build.classes.excludes=**/*.java,**/*.form
 file.reference.log4j-1.2.17.jar=../apache-jena-2.12.1/lib/log4j-1.2.17.jar
 javadoc.author=false
 build.sysclasspath=ignore
-javac.target=1.8
+javac.target=16
 build.generated.dir=${build.dir}/generated
 project.VERSCommon=../VERSCommon
 reference.VERSCommon.jar=${project.VERSCommon}/dist/VERSCommon.jar
@@ -28,6 +39,10 @@ javac.deprecation=false
 jnlp.signed=false
 file.reference.slf4j-log4j12-1.7.6.jar=../apache-jena-2.12.1/lib/slf4j-log4j12-1.7.6.jar
 project.licensePath=./nbproject/licenseheader.txt
+run.modulepath=\
+    ${javac.modulepath}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 test.src.dir=test
 jar.archive.disabled=${jnlp.enabled}
 junit.selected.version=4
@@ -41,7 +56,7 @@ javadoc.version=true
 build.classes.dir=${build.dir}/classes
 dist.dir=dist
 manifest.file=manifest.mf
-javac.source=1.8
+javac.source=16
 run.jvmargs=
 manifest.custom.permissions=
 javac.test.processorpath=${javac.test.classpath}
@@ -54,7 +69,7 @@ jnlp.signing=
 javadoc.notree=false
 dist.jar=${dist.dir}/neoVEO.jar
 file.reference.jena-iri-1.1.1.jar=../apache-jena-2.12.1/lib/jena-iri-1.1.1.jar
-platform.active=default_platform
+platform.active=JDK_16
 annotation.processing.enabled=true
 file.reference.xercesImpl-2.11.0.jar=../apache-jena-2.12.1/lib/xercesImpl-2.11.0.jar
 main.class=Tests.StressTest
@@ -77,7 +92,7 @@ javadoc.private=false
 javadoc.encoding=${source.encoding}
 build.test.classes.dir=${build.dir}/test/classes
 jar.index=${jnlp.enabled}
-javac.compilerargs=-Xlint:unchecked
+javac.compilerargs=-Xlint:unchecked -Xlint:deprecation
 source.encoding=UTF-8
 jnlp.signing.keystore=
 meta.inf.dir=${src.dir}/META-INF
