Moved back to JDK 8 so as to be portable

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ build.classes.excludes=**/*.java,**/*.form
 file.reference.log4j-1.2.17.jar=../apache-jena-2.12.1/lib/log4j-1.2.17.jar
 javadoc.author=false
 build.sysclasspath=ignore
-javac.target=16
+javac.target=1.8
 build.generated.dir=${build.dir}/generated
 project.VERSCommon=../VERSCommon
 reference.VERSCommon.jar=${project.VERSCommon}/dist/VERSCommon.jar
@@ -56,7 +56,7 @@ javadoc.version=true
 build.classes.dir=${build.dir}/classes
 dist.dir=dist
 manifest.file=manifest.mf
-javac.source=16
+javac.source=1.8
 run.jvmargs=
 manifest.custom.permissions=
 javac.test.processorpath=${javac.test.classpath}
@@ -69,7 +69,7 @@ jnlp.signing=
 javadoc.notree=false
 dist.jar=${dist.dir}/neoVEO.jar
 file.reference.jena-iri-1.1.1.jar=../apache-jena-2.12.1/lib/jena-iri-1.1.1.jar
-platform.active=JDK_16
+platform.active=JDK_1.8_Adoptium_302-b08
 annotation.processing.enabled=true
 file.reference.xercesImpl-2.11.0.jar=../apache-jena-2.12.1/lib/xercesImpl-2.11.0.jar
 main.class=Tests.StressTest
