Moved back to JDK 8 so as to be portable

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -72,7 +72,7 @@ file.reference.jena-iri-1.1.1.jar=../apache-jena-2.12.1/lib/jena-iri-1.1.1.jar
 platform.active=JDK_1.8_Adoptium_302-b08
 annotation.processing.enabled=true
 file.reference.xercesImpl-2.11.0.jar=../apache-jena-2.12.1/lib/xercesImpl-2.11.0.jar
-main.class=Tests.StressTest
+main.class=VEOAnalysis.VEOAnalysis
 dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
