--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,6 +2,7 @@ debug.modulepath=\
     ${run.modulepath}
 debug.test.modulepath=\
     ${run.test.modulepath}
+file.reference.commons-compress-1.21.jar=srclib/commons-compress-1.21.jar
 file.reference.commons-lang3-3.12.0.jar=srclib/commons-lang3-3.12.0.jar
 file.reference.jena-base-4.3.2.jar=srclib/jena-base-4.3.2.jar
 file.reference.jena-core-4.3.2.jar=srclib/jena-core-4.3.2.jar
@@ -61,7 +62,6 @@ build.classes.dir=${build.dir}/classes
 dist.dir=dist
 manifest.file=manifest.mf
 javac.source=1.8
-run.jvmargs=
 manifest.custom.permissions=
 javac.test.processorpath=${javac.test.classpath}
 dist.archive.excludes=
@@ -92,7 +92,8 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.7.32.jar}:\
     ${file.reference.xml-apis-1.4.01.jar-1}:\
     ${file.reference.commons-lang3-3.12.0.jar}:\
-    ${file.reference.jena-shaded-guava-4.3.2.jar}
+    ${file.reference.jena-shaded-guava-4.3.2.jar}:\
+    ${file.reference.commons-compress-1.21.jar}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
