--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,15 +3,11 @@ debug.modulepath=\
 debug.test.modulepath=\
     ${run.test.modulepath}
 file.reference.commons-compress-1.21.jar=srclib/commons-compress-1.21.jar
-file.reference.commons-lang3-3.12.0.jar=srclib/commons-lang3-3.12.0.jar
-file.reference.jena-base-4.3.2.jar=srclib/jena-base-4.3.2.jar
-file.reference.jena-core-4.3.2.jar=srclib/jena-core-4.3.2.jar
-file.reference.jena-iri-4.3.2.jar=srclib/jena-iri-4.3.2.jar
-file.reference.jena-shaded-guava-4.3.2.jar=srclib/jena-shaded-guava-4.3.2.jar
-file.reference.log4j-api-2.16.0.jar=srclib/log4j-api-2.16.0.jar
-file.reference.log4j-core-2.16.0.jar=srclib/log4j-core-2.16.0.jar
-file.reference.log4j-slf4j-impl-2.16.0.jar=srclib/log4j-slf4j-impl-2.16.0.jar
-file.reference.slf4j-api-1.7.32.jar=srclib/slf4j-api-1.7.32.jar
+file.reference.jena-core-2.12.1.jar=srclib/Jena2/jena-core-2.12.1.jar
+file.reference.jena-iri-1.1.1.jar-1=srclib/Jena2/jena-iri-1.1.1.jar
+file.reference.log4j-1.2.17.jar-1=srclib/Jena2/log4j-1.2.17.jar
+file.reference.slf4j-api-1.7.6.jar-1=srclib/Jena2/slf4j-api-1.7.6.jar
+file.reference.slf4j-log4j12-1.7.6.jar-1=srclib/Jena2/slf4j-log4j12-1.7.6.jar
 file.reference.xercesImpl-2.11.0.jar-1=srclib/xercesImpl-2.11.0.jar
 file.reference.xml-apis-1.4.01.jar-1=srclib/xml-apis-1.4.01.jar
 javac.external.vm=false
@@ -73,7 +69,7 @@ jnlp.signing=
 javadoc.notree=false
 dist.jar=${dist.dir}/neoVEO.jar
 file.reference.jena-iri-1.1.1.jar=../apache-jena-2.12.1/lib/jena-iri-1.1.1.jar
-platform.active=default_platform
+platform.active=JDK_11
 annotation.processing.enabled=true
 file.reference.xercesImpl-2.11.0.jar=../apache-jena-2.12.1/lib/xercesImpl-2.11.0.jar
 main.class=VEOCreate.CreateVEOs
@@ -83,17 +79,13 @@ auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbpr
 javac.classpath=\
     ${reference.VERSCommon.jar}:\
     ${file.reference.xercesImpl-2.11.0.jar-1}:\
-    ${file.reference.jena-base-4.3.2.jar}:\
-    ${file.reference.jena-core-4.3.2.jar}:\
-    ${file.reference.jena-iri-4.3.2.jar}:\
-    ${file.reference.log4j-api-2.16.0.jar}:\
-    ${file.reference.log4j-core-2.16.0.jar}:\
-    ${file.reference.log4j-slf4j-impl-2.16.0.jar}:\
-    ${file.reference.slf4j-api-1.7.32.jar}:\
     ${file.reference.xml-apis-1.4.01.jar-1}:\
-    ${file.reference.commons-lang3-3.12.0.jar}:\
-    ${file.reference.jena-shaded-guava-4.3.2.jar}:\
-    ${file.reference.commons-compress-1.21.jar}
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.jena-core-2.12.1.jar}:\
+    ${file.reference.jena-iri-1.1.1.jar-1}:\
+    ${file.reference.log4j-1.2.17.jar-1}:\
+    ${file.reference.slf4j-api-1.7.6.jar-1}:\
+    ${file.reference.slf4j-log4j12-1.7.6.jar-1}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
