--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,8 @@ debug.modulepath=\
 debug.test.modulepath=\
     ${run.test.modulepath}
 file.reference.commons-compress-1.21.jar=srclib/commons-compress-1.21.jar
-file.reference.jena-core-2.12.1.jar=srclib/Jena2/jena-core-2.12.1.jar
-file.reference.jena-iri-1.1.1.jar-1=srclib/Jena2/jena-iri-1.1.1.jar
+file.reference.jena-core-2.13.0.jar=srclib/Jena2/jena-core-2.13.0.jar
+file.reference.jena-iri-1.1.2.jar=srclib/Jena2/jena-iri-1.1.2.jar
 file.reference.log4j-1.2.17.jar-1=srclib/Jena2/log4j-1.2.17.jar
 file.reference.slf4j-api-1.7.6.jar-1=srclib/Jena2/slf4j-api-1.7.6.jar
 file.reference.slf4j-log4j12-1.7.6.jar-1=srclib/Jena2/slf4j-log4j12-1.7.6.jar
@@ -81,9 +81,9 @@ javac.classpath=\
     ${file.reference.xercesImpl-2.11.0.jar-1}:\
     ${file.reference.xml-apis-1.4.01.jar-1}:\
     ${file.reference.commons-compress-1.21.jar}:\
-    ${file.reference.jena-core-2.12.1.jar}:\
-    ${file.reference.jena-iri-1.1.1.jar-1}:\
     ${file.reference.log4j-1.2.17.jar-1}:\
+    ${file.reference.jena-core-2.13.0.jar}:\
+    ${file.reference.jena-iri-1.1.2.jar}:\
     ${file.reference.slf4j-api-1.7.6.jar-1}:\
     ${file.reference.slf4j-log4j12-1.7.6.jar-1}
 javadoc.noindex=false
