--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -69,7 +69,7 @@ jnlp.signing=
 javadoc.notree=false
 dist.jar=${dist.dir}/neoVEO.jar
 file.reference.jena-iri-1.1.1.jar=../apache-jena-2.12.1/lib/jena-iri-1.1.1.jar
-platform.active=JDK_11
+platform.active=default_platform
 annotation.processing.enabled=true
 file.reference.xercesImpl-2.11.0.jar=../apache-jena-2.12.1/lib/xercesImpl-2.11.0.jar
 main.class=VEOCreate.CreateVEOs
