--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ javadoc.author=false
 build.sysclasspath=ignore
 javac.target=1.8
 build.generated.dir=${build.dir}/generated
+no.dependencies=true
 project.VERSCommon=../VERSCommon
 reference.VERSCommon.jar=${project.VERSCommon}/dist/VERSCommon.jar
 run.classpath=\
