--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -8,8 +8,8 @@ file.reference.jena-iri-1.1.2.jar=srclib/Jena2/jena-iri-1.1.2.jar
 file.reference.log4j-1.2.17.jar-1=srclib/Jena2/log4j-1.2.17.jar
 file.reference.slf4j-api-1.7.6.jar-1=srclib/Jena2/slf4j-api-1.7.6.jar
 file.reference.slf4j-log4j12-1.7.6.jar-1=srclib/Jena2/slf4j-log4j12-1.7.6.jar
-file.reference.xercesImpl-2.11.0.jar-1=srclib/xercesImpl-2.11.0.jar
-file.reference.xml-apis-1.4.01.jar-1=srclib/xml-apis-1.4.01.jar
+file.reference.xercesImpl-2.12.2.jar=srclib/xercesImpl-2.12.2.jar
+file.reference.xml-apis-2.12.2.jar=srclib/xml-apis-2.12.2.jar
 javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
@@ -79,14 +79,14 @@ javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 javac.classpath=\
     ${reference.VERSCommon.jar}:\
-    ${file.reference.xercesImpl-2.11.0.jar-1}:\
-    ${file.reference.xml-apis-1.4.01.jar-1}:\
     ${file.reference.commons-compress-1.21.jar}:\
     ${file.reference.log4j-1.2.17.jar-1}:\
     ${file.reference.jena-core-2.13.0.jar}:\
     ${file.reference.jena-iri-1.1.2.jar}:\
     ${file.reference.slf4j-api-1.7.6.jar-1}:\
-    ${file.reference.slf4j-log4j12-1.7.6.jar-1}
+    ${file.reference.slf4j-log4j12-1.7.6.jar-1}:\
+    ${file.reference.xercesImpl-2.12.2.jar}:\
+    ${file.reference.xml-apis-2.12.2.jar}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
